--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jfdzr7-team-codebusters",
   "version": "0.1.0",
+  "homepage": "https://infoshareacademy.github.io/jfdzr7-team-codebusters",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
@@ -8,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.4",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
